--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
         <li><a href="https://workflowy.com">Workflowy</a></li>
       </ul>
     </div>
+    <div>
+      <form role="search" method="get" id="searchform" class="searchform" action="http://www.google.co.uk/search?hl=en-GB&source=hp&q=">
+        <div id="gform">
+          <label class="screen-reader-text" for="s"></label>
+          <input type="text" value="" name="q" id="s">
+          <input type="submit" class="btn fa-input" value="&#xf002;" style="font-family: FontAwesome;">
+      </div>
+      </form>
+    </div>
   </body>
 </html>
